# fluxfish

./: .gitattributes  .gitignore  CMakeLists.txt  ROADMAP.md  TRAINING_PLAN.md  check_pgn.py  compare_moves.py  create_enhanced_files.sh  debug_moves.py  deduplicate_pgn.py  fast_search.py  games.pgn  generate_selfplay.py  generate_stockfish_games.py  liquid_chess  mcts_search.py  reference_perft.py  requirements.txt  rl_loop.py  test_model.py  train_lrt.py  train_rl.py
checkpoints/checkpoint_101/: _CHECKPOINT_METADATA  manifest.ocdbt
checkpoints/checkpoint_150/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
checkpoints/checkpoint_3/: _CHECKPOINT_METADATA  manifest.ocdbt
checkpoints/checkpoint_32000/: _CHECKPOINT_METADATA  manifest.ocdbt
checkpoints/checkpoint_32200/: _CHECKPOINT_METADATA  manifest.ocdbt
checkpoints/checkpoint_33200/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
checkpoints/checkpoint_34200/: _CHECKPOINT_METADATA  manifest.ocdbt
checkpoints/checkpoint_35200/: _CHECKPOINT_METADATA  manifest.ocdbt
checkpoints/checkpoint_4/: _CHECKPOINT_METADATA  _sharding  manifest.ocdbt
checkpoints/checkpoint_40/: _CHECKPOINT_METADATA  _sharding  manifest.ocdbt
checkpoints_rl/checkpoint_100/: _CHECKPOINT_METADATA  _METADATA
cpp/src/: main.cpp  position.cpp
data/: Komodo.pgn  Obsidian.pgn  PlentyChess.pgn  Stockfish.pgn
tests/: conftest.py  test_engine_perft.py  test_engine_speed.py  test_engine_uci.py  test_enhanced_encoder.py  test_enhanced_integration.py  test_feature_extraction.py  test_gates.py  test_imports.py  test_training_smoke.py
(+39 files in other folders)
